Fix an issue where toggle menu shows on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,11 +243,11 @@ pre {
         position: fixed;
         float: none;
         display: block;
-        right: -25%;
+        right: -30%;
         top: 0;
         background-color: #111;
         line-height: initial;
-        width: 25%;
+        width: 30%;
         min-width: 120px;
         height: 100%;
         padding-top: var(--header-height);
